2011-02-23  Xerxes Ranby  <xerxes@zafena.se>

	JamVM: Try --with-additional-vms=jamvm topping!
	* NEWS: Updated.
	* Makefile.am (stamps/add-jamvm.stamp): New make target.
	(clean-add-jamvm): Likewise.
	(stamps/add-jamvm-debug.stamp): Likewise.
	(clean-add-jamvm-debug): Likewise.
	(.PHONY): Add clean-add-jamvm and clean-add-jamvm-debug.
	(stamps/icedtea-stage2.stamp): Add stamps/add-jamvm.stamp.
	(clean-icedtea-stage2): Add clean-add-jamvm.
	(stamps/icedtea-debug-stage2.stamp):
	Add stamps/add-jamvm-debug.stamp.
	(clean-icedtea-debug-stage2): Add clean-add-jamvm-debug.
	* acinclude.m4 (IT_CHECK_ADDITIONAL_VMS):
	Set add_vm_jamvm if jamvm are found.
	(BUILD_JAMVM): Add check for add_vm_jamvm.
	(ADD_JAMVM_BUILD): New conditional dependent on add_vm_jamvm.

2011-02-22  Xerxes Ranby  <xranby@zafena.se>

	Fix icedtea-boot build with --enable-jamvm
	(stamps/icedtea-boot.stamp): Add stamps/jamvm.stamp

2011-05-18  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-jamvm): Don't remove clean-extract-jamvm.stamp
	here; use its own target.
	(clean-extract-jamvm): Added.

2011-02-22  Xerxes Ranby  <xerxes@zafena.se>

	JamVM: Taste the New --enable-jamvm Flavour!
	* NEWS: Updated.
	* Makefile.am (JAMVM_VERSION): New variable.
	(JAMVM_SHA256SUM): Likewise.
	(JAMVM_BASE_URL): Likewise.
	(JAMVM_URL): Likewise.
	(JAMVM_SRC_ZIP): Likewise.
	(JAMVM_IMPORT_PATH): Likewise.
	(ICEDTEA_BUILD_TARGET):
	Build only jdk if jamvm are enabled.
	(ICEDTEA_DEBUG_BUILD_TARGET): Likewise.
	(ICEDTEA_ENV): Set ALT_HOTSPOT_IMPORT_PATH to JAMVM_IMPORT_PATH
	if jamvm are enabled.
	(PRODUCT_NAME): Make -version report IcedTea6 Runtime Environment
	if jamvm are enabled.
	(JDK_DERIVATIVE_NAME): Only show IcedTea version
	if jamvm are enabled.
	(stamps/download-jamvm.stamp): New make target.
	(clean-download-jamvm): Likewise.
	(stamps/extract-jamvm.stamp): Likewise.
	(stamps/jamvm.stamp): Likewise.
	(clean-jamvm): Likewise.
	(.PHONY): Add clean-jamvm.